--- a/UserInterface/package.json
+++ b/UserInterface/package.json
@@ -18,6 +18,7 @@
     "react-dev-utils": "^10.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hotkeys-hook": "^4.5.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
